<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="wrap_content">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/message_address"
        android:id="@+id/address"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="#000000"
        android:padding="10dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/message_body"
        android:id="@+id/body"
        android:textSize="15sp"
        android:padding="10dp"
        android:textColor="#8d93a0"
        android:layout_below="@+id/address"
        android:layout_alignStart="@+id/address" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/message_date"
        android:id="@+id/date"
        android:textSize="15sp"
        android:padding="5dp"
        android:textColor="#00001f"
        android:layout_alignBaseline="@+id/body"
        android:layout_alignBottom="@+id/body"
        android:layout_alignParentEnd="true" />

    <CheckBox
        android:id="@+id/box"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/date"
        android:layout_alignParentEnd="true"
        android:focusable="false"
        android:visibility="gone" />
</RelativeLayout>